Feature: Automação de acesso ao drive

--- a/Automacao01.ipynb
+++ b/Automacao01.ipynb
@@ -3,13 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3ff52c5",
+   "id": "595c75f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pyautogui\n",
     "import time\n",
     "import pyperclip\n",
+    "\n",
+    "# pyautogui.press -> Aperta uma unica tecla\n",
+    "# pyautogui.write -> Digita um texto \n",
+    "# pyautogui.click -> Ação de click\n",
+    "# pyautogui.hotkey() -> Executa um atalho\n",
     "\n",
     "# Faz uma pausa a cada linha de código\n",
     "pyautogui.Pause = 1\n",
