--- a/Email.ipynb
+++ b/Email.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "id": "6ca672f6",
    "metadata": {},
    "outputs": [],
@@ -22,32 +22,52 @@
     "\n",
     "# Delay de acesso\n",
     "time.sleep(5)\n",
-    "pyautogui.click(x=360, y=308, clicks=2)\n",
+    "pyautogui.click(x=360, y=267, clicks=2)\n",
     "\n",
-    "# checkpoint 1:03:15\n"
+    "time.sleep(2)\n",
+    "pyautogui.click(x=344, y=441)\n",
+    "pyautogui.click(x=1172, y=156)\n",
+    "\n",
+    "time.sleep(1)\n",
+    "pyautogui.click(x=938, y=592)\n",
+    "\n",
+    "\n",
+    "# checkpoint 1:03:15\n",
+    "# time.sleep(5)\n",
+    "# pyautogui.position()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "65f46a2d",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Point(x=305, y=337)"
+       "Point(x=938, y=592)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "time.sleep(5)\n",
-    "pyautogui.position()"
+    "import pandas\n",
+    "tabelas = pandas.read_excel(r\"C:\\Users\\kened\\DownloadsVendas - Dez.xlsx\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3a37bceb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
